# contribproof

./: Anchor.toml  Cargo.toml  LICENSE  README.md
action/: README.md  action.yml  package.json
action/src/: index.ts
program/: Cargo.toml  README.md
program/src/: lib.rs
verifier/: README.md  app.js  index.html
