[package]
name = "contribproof"
version = "0.1.0"
description = "Issues compressed-NFT contribution credentials on merge"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "contribproof"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# Pin these to whatever versions are current when you actually run `anchor build` —
# Bubblegum / account-compression move fast, check crates.io before installing.
anchor-lang = "0.30.1"
mpl-bubblegum = "1.5.0"
spl-account-compression = { version = "0.4.2", features = ["cpi"] }
spl-noop = { version = "0.2.0", features = ["cpi"] }
solana-program = "1.18.20"
